Rebar3 support only, R16-OTP20.
- Removed Rebar2 support.
- Removed support for OTP before R16B02.
- Fixed some dialyzer warnings, turned off others.
- Changed to use getopt as a dependency to stay up to date.
- Fixed tests that require a live distributed node ...
- ... and the port conflict exposed when they had one.
- Bumped up eunit timeouts on some borderline tests.
- Moved test-only modules into separate test directory.
- Added Thumbs.
- Updated Travis.

Jira issue RIAK-3378 has been filed:
Some of the scripts in priv/bin seem redundant with the functionality in the escript.
It might be worthwhile to embed all functionality in the escript and do away with the shell scripts altogether.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
 language: erlang
-
 notifications:
   webhooks: http://basho-engbot.herokuapp.com/travis?key=2a0d2be54652e014d73f3431754de1f6136f2182
   email: eng@basho.com
-
-otp_release:
-  - 18.0
-  - 17.5
-  - R16B03-1
-
+install:
+  - wget https://s3.amazonaws.com/rebar3/rebar3 && chmod +x rebar3
 script:
-  make test
-
-sudo: false
+  - ./rebar3 as prod compile
+  - ./rebar3 as check xref
+  - ./rebar3 as check dialyzer
+  - ./rebar3 eunit
+  - ./rebar3 edoc
+otp_release:
+  - 19.2
+  - 18.3
+  - 17.5
+  - R16B03
