--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,45 @@
-.#*
-\#*
-*~
-/*.plt
-/.rebar/
+# rebar
+/.cache/
 /.eunit/
-/ebin/
-/priv/bin/eper
-/doc/*.html
+/.rebar/
+/.rebar3/
+/_build/
+/_checkouts
+/deps
+/rebar.lock
+
+# work environments
+*.bak
+*.dump
+*.iml
+*.plt
+*.sublime-project
+*.sublime-workspace
+*.tmp
+*_plt
+*~
+.DS_Store
+.idea/
+.project
+.settings/
+.tm_properties
+/*.txt
+erln8.config
+tmp/
+
+# Erlang build/test artifacts
+*.app
+*.beam
+*.coverdata
+*.crashdump
+/*.trc
+/.eqc*
 /doc/*.css
+/doc/*.html
 /doc/*.png
 /doc/edoc-info
-*beam
-.local_dialyzer_plt
+/ebin/
+/log/
+
+# EScript
+/priv/bin/eper
