--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,152 @@
-%-*- mode: erlang; erlang-indent-level: 2 -*-
-{erl_opts,            [debug_info, warnings_as_errors]}.
-{xref_checks,         [undefined_function_calls]}.
-{cover_enabled,       true}.
-{cover_print_enabled, true}.
-{escript_name,        "priv/bin/eper"}.
+%% -*- mode: erlang; erlang-indent-level: 4; indent-tabs-mode: nil -*-
+%% -------------------------------------------------------------------
+%%
+%% Copyright (c) 2017 Basho Technologies, Inc.
+%%
+%% This file is provided to you under the Apache License,
+%% Version 2.0 (the "License"); you may not use this file
+%% except in compliance with the License.  You may obtain
+%% a copy of the License at
+%%
+%%   http://www.apache.org/licenses/LICENSE-2.0
+%%
+%% Unless required by applicable law or agreed to in writing,
+%% software distributed under the License is distributed on an
+%% "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+%% KIND, either express or implied.  See the License for the
+%% specific language governing permissions and limitations
+%% under the License.
+%%
+%% -------------------------------------------------------------------
+
+{minimum_otp_vsn, "R16B02_basho10"}.
+
+{brt_protect, true}.
+
+{erl_opts, [
+%   {platform_define, "^(R|17)",  'NO_CONTRACT_OVERLOAD'},
+    {platform_define, "^(R|17)",  'NO_ERLANG_TIMESTAMP'},
+%   {platform_define, "^R",       'NO_MAP_TYPE'},
+%   {platform_define, "^(R|17)",  'NO_MONOTONIC_TIME'},
+%   {platform_define, "^R",       'NO_NAMESPACED_TYPES'},
+%   {platform_define, "^(R|17)",  'NO_ORDDICT_2'},
+%   {platform_define, "^(R|17)",  'NO_RAND_MODULE'},
+
+    no_debug_info,
+    warn_bif_clash,
+    warn_export_all,
+    warn_export_vars,
+    warn_obsolete_guard,
+    warn_unused_import
+]}.
+
+{escript_name, "eper"}.
+
+{escript_incl_apps, [getopt]}.
+
+{post_hooks, [
+    {escriptize,
+        "cp -p \"$REBAR_BUILD_DIR/bin/eper\" \"$REBAR_ROOT_DIR/priv/bin/eper\""}
+]}.
+
+{deps, [
+    {getopt,
+        {git, "https://github.com/basho/getopt.git",
+        {branch, "rebar3"} }}
+]}.
+
+{profiles, [
+    {check, [
+        {dialyzer, [
+            {warnings, [
+                % lots of these, low priority fix
+                % unmatched_returns,
+
+                % some handled, some not, uncomment to see them
+                % race_conditions,
+
+                % too many of these to deal with for now
+                no_match,
+                no_opaque,
+
+                error_handling,
+                unknown
+            ]}
+        ]},
+        {erl_opts, [
+            debug_info,
+            warnings_as_errors,
+            {d, 'BASHO_CHECK'}
+        ]},
+        {xref_checks, [
+            deprecated_function_calls,
+            deprecated_functions,
+            locals_not_used,
+            undefined_function_calls,
+            undefined_functions
+        ]}
+    ]},
+    {docs, [
+        {edoc_opts, [
+            {app_default, "http://www.erlang.org/doc/man"},
+            {preprocess, true},
+            {macros, [
+                {'EDOC', true},
+                {'BASHO_DOCS', true}
+            ]}
+        ]}
+    ]},
+    {prod, [
+        {erl_opts, [
+            warnings_as_errors,
+            {d, 'BASHO_PROD'}
+        ]},
+        {provider_hooks, [
+            {post, [{compile, escriptize}]}
+        ]}
+    ]},
+    {test, [
+        {cover_enabled, true},
+        {erl_opts, [
+            debug_info,
+            nowarn_deprecated_function,
+            nowarn_export_all,
+            nowarn_unused_function,
+            warnings_as_errors,
+            {d, 'BASHO_TEST'}
+        ]}
+    ]},
+    {validate, [
+        {erl_opts, [
+            strong_validation,
+            no_auto_import,
+            warn_bif_clash,
+            warn_deprecated_function,
+            warn_deprecated_type,
+            warn_export_all,
+            warn_export_vars,
+            warn_missing_spec,
+            warn_missing_spec_all,
+            warn_obsolete_guard,
+            warn_shadow_vars,
+            warn_untyped_record,
+            warn_unused_function,
+            warn_unused_import,
+            warn_unused_record,
+            warn_unused_vars,
+            {d, 'BASHO_VALIDATE'}
+        ]}
+    ]}
+]}.
+
+{brt_upstream, [
+    {upstream, {git, "https://github.com/massemanet/eper.git"}},
+    {mirror, upstream, master}
+]}.
+
+{plugins, [
+    {basho_rebar_tools,
+        {git, "https://github.com/basho/basho_rebar_tools.git",
+        {branch, "master"} }}
+]}.
+
